JP subscriptions input minor alignment fix

--- a/sass/site/primary/_comments.scss
+++ b/sass/site/primary/_comments.scss
@@ -237,6 +237,8 @@
 
 		input {
 			margin-right: 0;
+			position: relative;
+			top: -1px;
 		}
 
 		label {
